tests/snapshots/cmd_rm__cmd_rm::rm_multiple-diff.snap
---
source: tests/cmd_rm.rs
expression: value
---
--- a/.github/ghat/ghat.lock
+++ b/.github/ghat/ghat.lock
@@ -1,2 +0,0 @@
-Swatinem/rust-cache tag:v2.7.8 9d47c6ad4b02e050fd481d890b2ea34778fd09d6
-actions/checkout tag:v4.2.2 11bd71901bbe5b1630ceea73d27597364c9af683
