tests/snapshots/cmd_rm__cmd_rm::rm_multiple-output.snap
---
source: tests/cmd_rm.rs
expression: value
---
exit_code: 0
---stderr---
     Removed actions/checkout
     Removed Swatinem/rust-cache
