tests/snapshots/cmd_rm__cmd_rm::rm_partial_failure-output.snap
---
source: tests/cmd_rm.rs
expression: value
---
exit_code: 1
---stderr---
Error: 
  x nonexistent/action not found in lockfile
