tests/snapshots/cmd_rm__cmd_rm::rm_single-mappings.snap
---
source: tests/cmd_rm.rs
expression: value
---
globalThis.__GHAT_ACTION_MAPPINGS = {
  "Swatinem/rust-cache": {
    inputs: {
      "shared_key": "shared-key",
      "cache_on_failure": "cache-on-failure"
    },
    outputs: {
      "cache_hit": "cache-hit"
    },
  },
};
