tests/snapshots/cmd_rm__cmd_rm::rm_single-output.snap
---
source: tests/cmd_rm.rs
expression: value
---
exit_code: 0
---stderr---
removed actions/checkout
