tests/snapshots/cmd_rm__rm_no_actions.snap
---
source: tests/cmd_rm.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x no actions specified
