tests/snapshots/cmd_rm__rm_no_lockfile.snap
---
source: tests/cmd_rm.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x lockfile not found: .github/ghat/ghat.lock
  | 
  | Run `ghat init` first to initialize the project.
