tests/snapshots/cmd_rm__rm_not_found.snap
---
source: tests/cmd_rm.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x nonexistent/action not found in lockfile
